# Integration_tests

./: README.md  conftest.py  pyproject.toml  pytest.ini
components/: date_field.py  grid_table.py  label_dropdown.py
configs/: env.py
models/: dictionaries_models.py
pages/: login_page.py
tests/api/: conftest.py
tests/api/test_for_debug/: test_ident_photo.py
tests/ui/: conftest.py
tests/ui/test_filters/: test_filters_portal.py
utils/: parse_response.py
